[package]
name = "procontest"
version = "0.1.10"
authors = ["statiolake <statiolake@gmail.com>"]
edition = "2018"
repository = "https://github.com/statiolake/procontest-rs"
license = "MIT OR Apache-2.0"
readme = "README.md"
description = "Test utility for competitive programming"

[dependencies]
cli_test_dir = "0.1.7"
terminal_size = "0.1.8"
splitv = "0.2.1"
itertools = "0.8.0"
